# vk-gltf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: vk_gltf.h
include/vk_gltf/: loader.h
src/: loader.cpp
test/: CMakeLists.txt  camera.cpp  camera.h  common.h  frame.cpp  frame.h  main.cpp  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  vendor_impls.cpp  vk_context.cpp  vk_context.h  window.cpp  window.h
test/shaders/: common.glsl  compile_shaders.bat  gltf_pbr.frag  gltf_pbr.frag.spv  indexed_draw.vert  indexed_draw.vert.spv
